fixed footer line and alignment

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -713,6 +713,10 @@ video {
   display: none;
 }
 
+.h-screen {
+  height: 100vh;
+}
+
 .h-9 {
   height: 2.25rem;
 }
@@ -737,8 +741,8 @@ video {
   height: 1px;
 }
 
-.h-screen {
-  height: 100vh;
+.h-11 {
+  height: 2.75rem;
 }
 
 .max-h-\[17rem\] {
@@ -765,8 +769,8 @@ video {
   width: 27.5rem;
 }
 
-.w-10 {
-  width: 2.5rem;
+.w-\[90\%\] {
+  width: 90%;
 }
 
 .max-w-full {
@@ -775,10 +779,6 @@ video {
 
 .max-w-xs {
   max-width: 20rem;
-}
-
-.max-w-7xl {
-  max-width: 80rem;
 }
 
 .max-w-lg {
@@ -964,19 +964,9 @@ video {
   background-color: rgba(245, 158, 11, var(--tw-bg-opacity));
 }
 
-.bg-green-500 {
-  --tw-bg-opacity: 1;
-  background-color: rgba(16, 185, 129, var(--tw-bg-opacity));
-}
-
 .bg-gray-300 {
   --tw-bg-opacity: 1;
   background-color: rgba(209, 213, 219, var(--tw-bg-opacity));
-}
-
-.bg-gray-900 {
-  --tw-bg-opacity: 1;
-  background-color: rgba(17, 24, 39, var(--tw-bg-opacity));
 }
 
 .bg-gradient-to-b {
@@ -999,10 +989,6 @@ video {
 
 .fill-current {
   fill: currentColor;
-}
-
-.p-\[3px\] {
-  padding: 3px;
 }
 
 .px-6 {
@@ -1097,12 +1083,12 @@ video {
   padding-top: 2rem;
 }
 
-.pl-6 {
-  padding-left: 1.5rem;
+.pl-\[6\%\] {
+  padding-left: 6%;
 }
 
-.pr-10 {
-  padding-right: 2.5rem;
+.pr-16 {
+  padding-right: 4rem;
 }
 
 .pb-4 {
@@ -1407,6 +1393,11 @@ video {
   background-color: rgba(63, 63, 63, var(--tw-bg-opacity));
 }
 
+.dark .dark\:bg-gray-400 {
+  --tw-bg-opacity: 1;
+  background-color: rgba(156, 163, 175, var(--tw-bg-opacity));
+}
+
 .dark .dark\:text-gray-300 {
   --tw-text-opacity: 1;
   color: rgba(209, 213, 219, var(--tw-text-opacity));
@@ -1492,16 +1483,44 @@ video {
 }
 
 @media (min-width: 768px) {
+  .md\:my-\[1\.6vw\] {
+    margin-top: 1.6vw;
+    margin-bottom: 1.6vw;
+  }
+
   .md\:block {
     display: block;
+  }
+
+  .md\:h-\[3vw\] {
+    height: 3vw;
   }
 
   .md\:max-w-sm {
     max-width: 24rem;
   }
 
+  .md\:max-w-\[37vw\] {
+    max-width: 37vw;
+  }
+
   .md\:flex-row {
     flex-direction: row;
+  }
+
+  .md\:items-end {
+    align-items: flex-end;
+  }
+
+  .md\:space-x-\[1\.5vw\] > :not([hidden]) ~ :not([hidden]) {
+    --tw-space-x-reverse: 0;
+    margin-right: calc(1.5vw * var(--tw-space-x-reverse));
+    margin-left: calc(1.5vw * calc(1 - var(--tw-space-x-reverse)));
+  }
+
+  .md\:py-\[0\.5vw\] {
+    padding-top: 0.5vw;
+    padding-bottom: 0.5vw;
   }
 
   .md\:pl-1 {
@@ -1512,8 +1531,32 @@ video {
     padding-top: 0px;
   }
 
-  .md\:pl-2 {
-    padding-left: 0.5rem;
+  .md\:pt-\[2vw\] {
+    padding-top: 2vw;
+  }
+
+  .md\:pl-\[5\.1\%\] {
+    padding-left: 5.1%;
+  }
+
+  .md\:pr-\[5\%\] {
+    padding-right: 5%;
+  }
+
+  .md\:pb-\[1\.1vw\] {
+    padding-bottom: 1.1vw;
+  }
+
+  .md\:pb-\[0\] {
+    padding-bottom: 0;
+  }
+
+  .md\:pt-\[0\.4vw\] {
+    padding-top: 0.4vw;
+  }
+
+  .md\:pb-\[1\.2vw\] {
+    padding-bottom: 1.2vw;
   }
 
   .md\:text-left {
@@ -1523,6 +1566,26 @@ video {
   .md\:text-xl {
     font-size: 1.25rem;
     line-height: 1.75rem;
+  }
+
+  .md\:text-\[1\.6vw\] {
+    font-size: 1.6vw;
+  }
+
+  .md\:text-\[1\.1vw\] {
+    font-size: 1.1vw;
+  }
+
+  .md\:text-\[1\.4vw\] {
+    font-size: 1.4vw;
+  }
+
+  .md\:text-\[0\.9vw\] {
+    font-size: 0.9vw;
+  }
+
+  .md\:leading-\[1\.6vw\] {
+    line-height: 1.6vw;
   }
 }
 
